force-app/main/default/objects/QES_Unity_Category_Group__c/QES_Unity_Category_Group__c.object-meta.xml
<CustomObject>
    <description>Custom object defined to include category group to be rendered on QES Unity PKB site. Records from this object will be used to feed &lt;categoryList&gt; VF tag.</description>
    <label>QES Unity Category Group</label>
    <nameField>
        <displayFormat>CG-{0000}</displayFormat>
        <label>QES Unity PKB Category Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QES Unity Category Group</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>