force-app/main/default/objects/QES_Unity_Category_Group__c/fields/Ancestors_Of__c.field-meta.xml
<CustomField>
    <fullName>Ancestors_Of__c</fullName>
    <description>In case root node is not specified an ancestor value could be used. This would include every value up to root.</description>
    <label>Ancestors Of</label>
    <length>80</length>
    <type>Text</type>
</CustomField>