force-app/main/default/objects/QES_Unity_Category_Group__c/fields/Category_Group_Label__c.field-meta.xml
<CustomField>
    <fullName>Category_Group_Label__c</fullName>
    <description>Label to be used on UI if required</description>
    <inlineHelpText>Label to be used on UI if required</inlineHelpText>
    <label>Category Group Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>