force-app/main/default/objects/QES_Unity_Category_Group__c/fields/Category_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Group_Name__c</fullName>
    <description>Category group name to be included in PKB site. This will be the unique internal name of data category group</description>
    <inlineHelpText>Category group name to be included in PKB site. This will be the unique internal name of data category group</inlineHelpText>
    <label>Category Group Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>