force-app/main/default/objects/QES_Unity_Category_Group__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active or inactive indicator. Only active records are used for rendering</description>
    <inlineHelpText>Active or inactive indicator. Only active records are used for rendering</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>