force-app/main/default/objects/QES_Unity_Category_Group__c/fields/Level_or_Depth__c.field-meta.xml
<CustomField>
    <fullName>Level_or_Depth__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>The level up to which category values are to be rendered. A value of -1 means everything.</description>
    <label>Level or Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>