force-app/main/default/objects/QES_Unity_Category_Group__c/fields/Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Ordinal__c</fullName>
    <description>order of rendering if there are more than one</description>
    <inlineHelpText>order of rendering if there are more than one</inlineHelpText>
    <label>Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>