force-app/main/default/objects/QES_Unity_Category_Group__c/fields/QES_Unity_Site_Setup__c.field-meta.xml
<CustomField>
    <fullName>QES_Unity_Site_Setup__c</fullName>
    <label>QES Unity Site Setup</label>
    <referenceTo>QES_Unity_Site_Setup_del__c</referenceTo>
    <relationshipLabel>QES Unity Category Group</relationshipLabel>
    <relationshipName>QES_Unity_Category_Group</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>