force-app/main/default/objects/QES_Unity_Category_Group__c/fields/Root_Category__c.field-meta.xml
<CustomField>
    <fullName>Root_Category__c</fullName>
    <description>Root value to be passed to categoryList VF tag.</description>
    <inlineHelpText>Root value to be passed to categoryList VF tag.</inlineHelpText>
    <label>Root Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>