force-app/main/default/objects/QES_Unity_Category_Group__c/fields/Show_On_Navbar__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Navbar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if this category to be displayed on navbar for quick search</description>
    <inlineHelpText>Indicate if this category to be displayed on navbar for quick search</inlineHelpText>
    <label>Show On Navbar</label>
    <type>Checkbox</type>
</CustomField>