force-app/main/default/objects/QES_Unity_Category_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category_Group_Label__c</columns>
    <columns>Level_or_Depth__c</columns>
    <columns>Root_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>